fix to keep items in column from collapsing

--- a/css/shared/new-pricing.less
+++ b/css/shared/new-pricing.less
@@ -302,5 +302,8 @@
   .pricing-features,
   .pricing-calculator {
     .flex-direction(column);
+    div {
+      .flex(auto);
+    }
   }
 }
